# vision-os

./: .gitignore  AGENTS.md  pyproject.toml
apps/: __init__.py
apps/areas/: admin.py  choices.py  models.py
apps/areas/api/: v1.py
apps/areas/migrations/: 0001_initial.py
apps/areas/schemas/: area.py
apps/areas/services/: area.py
apps/areas/urls/: u1.py
apps/base/: constants.py  exceptions.py  models.py  schemas.py  serializers.py  views.py
apps/users/: admin.py  constants.py  managers.py  models.py
apps/users/api/: v1.py
apps/users/migrations/: 0001_initial.py  0002_alter_user_managers.py
apps/users/schemas/: auth.py
apps/users/serializers/: auth.py
apps/users/services/: auth.py  user.py
apps/users/urls/: u1.py
config/: env.py  urls.py
config/django/: base.py
config/settings/: email.py  jwt.py
